syntax = "proto3";
option go_package = "./proto";
package proto;

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse) {};
}

message RegisterRequest {
  string id = 1;
  string username = 2;
  string password = 3;
}

message RegisterResponse { string accessToken = 1; }


// TODO
//Execute this command to create .pb files
// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative proto/authService/auth.proto